Fix alignment

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -180,6 +180,7 @@ input[type="color"]:focus,
 
 .task-font {
     font-size: 16px;
+    vertical-align: top;
     
     img {
         width: 100%;
